- Background show/hide selected nodes - plot pop-up on node-click - init for time range fixed

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="css/spin.css" />
 
     <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -53,6 +54,7 @@
 
   <body>
     <div id="sigma-container"></div>
+
     <div id="commands-container">
       <div class="row">
         <h4>Command pannel</h4>
@@ -147,6 +149,7 @@
       </div>
     </div>
 
+    <script type="module" src="lib/spin.js"></script>
     <script type="text/javascript" src="index.js"></script>
 
     <!-- End Document
