Reset button for time range filter implemented

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 name="htresh"
                 value="100000"
               /><br />
+              <button type="button" id="ResetTimeRange">Reset</button>
             </div>
           </div>
         </div>
