--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <script src="./lib/sigma_js/plugins/sigma.plugins.filter.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.plugins.animate.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.exporters.svg.min.js"></script>
+    <!-- Linkurious https://github.com/Linkurious/linkurious.js/blob/develop/plugins/sigma.exporters.gexf/sigma.exporters.gexf.js-->
+    <script src="./lib/sigma.exporters.gexf.js"></script>
 
     <!-- Plotly
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -133,8 +135,8 @@
         <button class="collapsible">Export</button>
         <div class="content">
           <div class="row">
-            <button id="export" type="export">SVG</button>
-            <button id="export2" type="export2">GEXF</button>
+            <button id="exportSVG" type="export">SVG</button>
+            <button id="exportGEXF" type="export2">GEXF</button>
           </div>
         </div>
       </div>
