--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
 
   <body>
     <div id="sigma-container"></div>
+    <div class="lds-roller" id="roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <div id="commands-container">
       <div class="row">
@@ -105,6 +115,7 @@
             <button id="exportGEXF" type="export2">GEXF</button>
           </div>
         </div>
+        <button type="button" id="TEST">TEST</button>
       </div>
     </div>
 
