exception handling for Plotly

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <button id="exportGEXF" type="export2">GEXF</button>
           </div>
         </div>
-        <button type="button" id="TEST">TEST</button>
+        <!-- <button type="button" id="TEST">TEST</button> -->
       </div>
     </div>
 
@@ -166,7 +166,7 @@
       <button type="button" id="ResetTimeRange">Reset</button>
     </div>
 
-    <script type="module" src="lib/spin.js"></script>
+    <!--  <script type="module" src="lib/spin.js"></script> -->
     <script type="text/javascript" src="index.js"></script>
 
     <!-- End Document
