🔥 Plotly rendering just became insanely faster which eases the usability of the tool for large graphs

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
       <button class="collapsible">Plot</button>
       <div class="content">
         <div class="row">
+          <input
+            id="CheckboxPlot"
+            type="checkbox"
+            name="Show Legend"
+            value="null"
+          />
+          Show legend<br />
           <div class="row" id="Plot"></div>
         </div>
       </div>
