Changes made for the large graph to be live on website

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
               <button id="noverlap" type="button">Noverlap</button><br />
               <input
-                id="Checkbox"
+                id="CheckboxNoverlap"
                 type="checkbox"
                 name="Neighbour node selection"
                 value="Null"
