added some settings to improve performance

--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
                   value="60000"
                 />
               </div>
+
+              <button class="collapsible">Custom filter</button>
+              <div class="content">
+                <div class="row"></div>
+                Attribute - greater - number
+                <select id="elementSelect">
+                  <option value="nodes">nodes</option>
+                  <option value="edges">edges</option>
+                </select>
+                <select id="attributeSelect"> </select>
+                <select id="comparisonSelect">
+                  <option value=">"> > </option>
+                  <option value="="> = </option>
+                  <option value="<"> < </option>
+                </select>
+                <input type="number" id="customThresh" value="0" />
+              </div>
             </div>
           </div>
         </div>
