--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
+    <!--- JSON ?------------------------------------->
+    <!---  <script type="text/javascript" src="data/final/activations_2018_09_2q.json"></script> -->
+
     <!-- Sigma
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="./lib/sigma_js/sigma.min.js"></script>
@@ -68,20 +71,11 @@
       <div></div>
     </div>
 
-    <div id="commands-container">
-      <div class="row">
-        <h4>Command pannel</h4>
+    <!-- <div id="commands-container" class="row">
+      <div class="one-third column">
         <button class="collapsible">Layout</button>
         <div class="content">
           <div class="row">
-            <input
-              id="CheckboxEdges"
-              type="checkbox"
-              name="Show edges"
-              value="null"
-            />
-            Show edges<br />
-
             <div class="row" id="Render">
               <button id="layout" type="button">Force Atlas 2</button><br />
               <input
@@ -102,7 +96,8 @@
               Single node selection<br />
 
               <div>
-                <button id="selectionR" type="button">Reset selection</button>
+                <button id="selectionR" type="button">Reset selection</button
+                ><br />
 
                 <input
                   type="range"
@@ -142,6 +137,17 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="one-third column">
+        <input
+          id="CheckboxEdges"
+          type="checkbox"
+          name="Show edges"
+          value="null"
+        />
+        Show edges
+      </div>
+      <div class="one-third column">
         <button class="collapsible">Export</button>
         <div class="content">
           <div class="row">
@@ -149,7 +155,130 @@
             <button id="exportGEXF" type="export2">GEXF</button>
           </div>
         </div>
-        <!-- <button type="button" id="TEST">TEST</button> -->
+      </div>
+    </div> -->
+
+    <div class="row" id="commands-container">
+      <button class="collapsible">Layout</button>
+      <div class="content">
+        <div class="row">
+          <div class="row" id="Render">
+            <button id="layout" type="button">Force Atlas 2</button><br />
+            <input
+              id="CheckboxLayout"
+              type="checkbox"
+              name="Neighbour node selection"
+              value="true"
+            />
+            Lin-Log-mode<br />
+
+            <button id="noverlap" type="button">Noverlap</button><br />
+            <input
+              id="CheckboxMultiselect"
+              type="checkbox"
+              name="Neighbour node selection"
+              value="Null"
+            />
+            Single node selection<br />
+
+            <div>
+              <button id="selectionR" type="button">Reset selection</button
+              ><br />
+
+              <input
+                type="range"
+                id="rangeDegree"
+                name="degree"
+                min="0"
+                max="35"
+                value="0"
+              />
+              Max degree <span id="max-degree-value">0</span> selected min
+              degree <span id="min-degree-value">0</span><br />
+              Min edge size:
+              <input
+                type="number"
+                id="edge-threshold"
+                name="ethresh"
+                value="1000"
+                step="100"
+              />
+            </div>
+
+            <button class="collapsible">Custom filter</button>
+            <div class="content">
+              <div class="row"></div>
+              Attribute - greater - number
+              <select id="elementSelect">
+                <option value="nodes">nodes</option>
+                <option value="edges">edges</option>
+              </select>
+              <select id="attributeSelect"> </select>
+              <select id="comparisonSelect">
+                <option value=">"> > </option>
+                <option value="="> = </option>
+                <option value="<"> < </option>
+              </select>
+              <input type="number" id="customThresh" value="0" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="one-third column">
+        <input
+          id="CheckboxEdges"
+          type="checkbox"
+          name="Show edges"
+          value="null"
+        />
+        Show edges <br />
+        <select id="WeekSelect">
+          <option
+            value="2018_09_1q"
+            startDate="2018-08-31 22:00:00"
+            hours="336"
+          >
+            1-15 sep. 2018</option
+          >
+          <option
+            value="2018_09_2q"
+            startDate="2018-09-14 22:00:00"
+            hours="384"
+          >
+            16-30 sep. 2018</option
+          >
+          <option
+            value="2018_09_1q"
+            startDate="2018-09-30 22:00:00"
+            hours="336"
+          >
+            1-15 oct. 2018</option
+          >
+          <option
+            value="2018_10_2q"
+            startDate="2018-10-14 22:00:00"
+            hours="385"
+          >
+            16-31 oct. 2018
+          </option>
+          <option
+            value="2018_10_1q"
+            startDate="2018-10-31 23:00:00"
+            hours="336"
+          >
+            1-15 nov. 2018</option
+          >
+        </select>
+        Week selector
+      </div>
+      <div class="one-third column">
+        <button class="collapsible">Export</button>
+        <div class="content">
+          <div class="row">
+            <button id="exportSVG" type="export">SVG</button>
+            <button id="exportGEXF" type="export2">GEXF</button>
+          </div>
+        </div>
       </div>
     </div>
 
