--- a/index.html
+++ b/index.html
@@ -58,19 +58,18 @@
   </head>
 
   <body>
-    <div id="sigma-container"></div>
-
-    <div class="lds-roller" id="roller">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <div id="sigma-container">
+      <div class="lds-roller" id="roller">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
-
     <div class="row" id="commands-container">
       <div class="three columns" id="content">
         <button class="collapsible">Layout</button>
@@ -123,7 +122,7 @@
             <button class="collapsible">Custom filter</button>
             <div class="content">
               <div class="row"></div>
-              Attribute - greater - number
+              Attribute - Comprison - value
               <select id="elementSelect">
                 <option value="nodes">nodes</option>
                 <option value="edges">edges</option>
