--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="row" id="commands-container">
-        <div class="two columns"></div>
+        <div class="three columns"></div>
         <div class="two columns">
           <input
             id="CheckboxEdges"
@@ -185,7 +185,7 @@
               name="ethresh"
               value="1000"
               step="100"
-              onchange="filterEdges()"
+              oninput="filterEdges()"
             />
           </div>
 
