Got rid of unnecesary CSS file used for prototyping + commented code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>Graph Visualization of Wikipedia</title>
-    <meta name="description" content="Graph Visualization of Wikipedia" />
+    <meta
+      name="description"
+      content="Visualization of graphs of Wikipedia pages and their activity over time"
+    />
     <meta name="author" content="Axel Nilsson" />
     <meta name="title" content="Graph Visualization" />
 
@@ -15,11 +18,7 @@
 
     <!-- FONT
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!--  <link
-      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
-      rel="stylesheet"
 
-    /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -33,7 +32,6 @@
     <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/skeleton.css" />
     <link rel="stylesheet" href="css/spin.css" />
 
@@ -58,6 +56,8 @@
     <script src="./lib/plotly-latest.min.js"></script>
   </head>
 
+  <!-- Body
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <body>
     <div id="sigma-container">
       <div class="lds-roller" id="roller">
