--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
     <script src="./lib/sigma_js/plugins/sigma.plugins.filter.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.plugins.animate.min.js"></script>
     <script src="./lib/sigma_js/plugins/sigma.exporters.svg.min.js"></script>
-    <script src="./lib/sigma.exporters.gexf.js"></script>
+    <script src="./lib/sigma_js/plugins/sigma.exporters.gexf.js"></script>
 
     <!-- Plotly
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="./lib/plotly-latest.min.js"></script>
+    <!-- FontAwesome
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="https://kit.fontawesome.com/47fcb0292b.js"></script>
   </head>
 
   <!-- Body
@@ -85,7 +88,7 @@
         <p id="nedges"></p>
         <p id="nnodes"></p>
       </div>
-      <div class="three columns">
+      <div class="two columns">
         <select id="WeekSelect">
           <option
             value="2018_09_1q"
@@ -123,15 +126,26 @@
             1-15 nov. 2018</option
           >
         </select>
-        Week selector
       </div>
-      <div class="two columns">
+      <div class="three columns">
         <button type="button" id="ResetTimeRange" onclick="resetTimeRange()">
-          Reset
+          <i class="fas fa-undo"></i>
+        </button>
+
+        <button type="button" onclick="zoomIn()">
+          <i class="fa fa-search-plus fa-lg" aria-hidden="true"></i>
+        </button>
+        <button type="button" onclick="zoomOut()">
+          <i class="fa fa-search-minus fa-lg" aria-hidden="true"></i>
+        </button>
+        <button type="button" onclick="initZoom()">
+          <i class="fas fa-expand-arrows-alt fa-lg" aria-hidden="true"></i>
         </button>
       </div>
       <div class="two columns">
-        <button class="collapsible">Export</button>
+        <button class="collapsible">
+          <i class="fas fa-download fa-lg" aria-hidden="true"></i>
+        </button>
         <div class="content">
           <div class="row">
             <button id="exportSVG" type="export">SVG</button>
@@ -191,7 +205,7 @@
           <button class="collapsible">Custom filter</button>
           <div class="content">
             <div class="row"></div>
-            Attribute - Comprison - value
+            Nodes/egdes - Attribute - Comprison - value
             <select id="elementSelect">
               <option value="nodes">nodes</option>
               <option value="edges">edges</option>
@@ -215,7 +229,9 @@
 
     <!-- Plot -->
     <div id="plot-container">
-      <button class="collapsible">Plot</button>
+      <button class="collapsible">
+        <i class="fas fa-chart-area fa-lg"></i>
+      </button>
       <div class="content">
         <div class="row">
           <input
@@ -228,7 +244,13 @@
           <div class="row" id="Plot"></div>
         </div>
       </div>
-      <button class="collapsible">Timeline filter</button>
+      <!-- <button class="collapsible">Timeline filter</button>-->
+      <button class="collapsible">
+        <span class="fas fa-magic fa-lg"></span>
+        <span class="fas fa-hourglass-half fa-lg"></span>
+        <!--<i class="fas fa-magicfa-lg"></i>
+        <i class="fas fa-hourglass-half fa-lg"></i>-->
+      </button>
       <div class="content">
         <div class="row">
           <div>
